--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,6 +14,18 @@
                         <input class="form-control" type="password" name="password" placeholder="password">
                     </div>
                     <div class="form-group">
+                        <input class="form-control" type="text" name="firstName" placeholder="firstName">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="lastName" placeholder="lastName">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="email" name="email" placeholder="jon@hoe.com">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="text" name="avatar" placeholder="avatar url">
+                    </div>
+                    <div class="form-group">
                         <input class="form-control" type="text" name="adminCode" placeholder="Admin code">
                     </div>
                     <div class="form-group">
