--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -9,6 +9,14 @@
             <p>
                 <a class="btn btn-lg btn-primary" href="/campgrounds/new">Add new campground</a>
             </p>
+            <p>
+                <form action="/campgrounds" method="GET" class="form-inline">
+                    <div class="form-group">
+                        <input type="text" name="search" placeholder="Campground search" class="form-control">
+                        <input type="submit" value="Search" class="btn btn-default">
+                    </div>
+                </form>
+            </p>
         </div>
     </header>
     
