--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -6,22 +6,27 @@
         <div class="col">
             <h1 style="text-align:center">Create a new campground</h1>
             <div style="width:30%; margin:25px auto">
+                <!--<form action="/campgrounds" method="POST" enctype="multipart/form-data">-->
                 <form action="/campgrounds" method="POST">
                     <div class="form-group">
-                        <input class="form-control" type="text" name = "name" placeholder="campground name">
+                        <input class="form-control" type="text" name = "campground[name]" placeholder="campground name">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="number" name = "price" placeholder="price" min="0.01" step="0.01">
+                        <input class="form-control" type="number" name = "campground[price]" placeholder="price" min="0.01" step="0.01">
                     </div>
                     <div class="form-group">
                         <input class="form-control" type="text" name= "image" placeholder="image url">
                     </div>
+                    <!--<div class="form-group">-->
+                    <!--    <label for="image">Image</label>-->
+                    <!--    <input type="file" id="image" name="image" accept="image/*" required>-->
+                    <!--</div>-->
                     <div class="form-group">
-                        <input class="form-control" type="text" name= "description" placeholder="description">
+                        <input class="form-control" type="text" name= "campground[description]" placeholder="description">
                     </div>
                     <div class="form-group">
                         <label for="location">Location</label>
-                        <input class="form-control" type="text" name="location" id="location" placeholder="Yosemite National Park, CA">
+                        <input class="form-control" type="text" name="campground[location]" id="location" placeholder="Yosemite National Park, CA">
                     </div>
                     <div class="form-group">
                         <button class="btn btn-lg btn-secondary btn-block">Submit</button>
