--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -11,6 +11,7 @@
             </div>
             <div id="map"></div>
         </div>
+        
         <div class="col-md-9">
             <div class="img-thumbnail">
                 <img class="img-responsive" src="<%= campground.image%>">
@@ -29,26 +30,97 @@
                     <% } %>
                 </div>
             </div>
+            
             <div class="card">
                 <div class="card-body">
+                    <!--Setting up the add new comment button that is used for collapsing-->
                     <div class="text-right">
-                        <a class="btn btn-success" href="/campgrounds/<%= campground._id%>/comments/new">Add new comments</a>
-                    </div>
+                        <a class="btn btn-success float-right" role="button" data-toggle="collapse" href="#collapseComment" aria-expanded="false" aria-controls="collapseComment">
+                        <i class="fas fa-plus"></i> Add new comment</a>
+                    </div> 
+                 
+                    <!--Comment section title-->
+                    <h4><strong>Comments <i class="fas fa-comment-alt"></i></span></strong></h4>
+                    
                     <hr>
+                    <!--Collapse Add a comment form START-->
+                    <div class="collapse" id="collapseComment">
+                        <div class="well" style="border-left: 5px solid #00C851;">
+                            <% if(!currentUser) { %>
+                          <!--If the user is not logged in, direct him to the login page-->
+                          <h5>You need to login before you can comment. <a href="/login">Click here</a> to go to the login page.</h5>
+                            <% } %>
+                            <% if(currentUser) { %>
+                          <!--If the user is logged in, show the new comment form-->
+                          <h4>Write your comment <i class="fas fa-pencil-alt"></i></h4>
+                          <form id="add-comment-form" action="/campgrounds/<%= campground._id %>/comments" method="POST">
+                            <div class="form-group">
+                              <input class="form-control" type="text" disabled value="<%= currentUser.username %>">
+                            </div>
+                            <div class="form-group">
+                              <textarea class="form-control" name="comment[text]" placeholder="Write your comment..." form="add-comment-form" rows="5" cols="70"></textarea>
+                            </div>
+                            <div class="form-group">
+                              <button class="btn btn-success btn-sm">Comment <i class="fas fa-comment-alt"></i></button>
+                            </div>
+                          </form>
+                            <% } %>
+                        </div>
+                    </div>
+                    <!--Collapse Add a comment form END-->
+                    
+                    <!--Check if there are comments, if there are none say no comments.-->
+                    <% if (campground.comments.length === 0) { %>
+                          <em style="color: grey;">No comments yet.</em>
+                    <% } %>
+                    
+                    <!--Display comments by looping through them-->
                     <% campground.comments.forEach(function(comment) { %>
                         <div class="row">
                             <div class="col-md-12">
+                                
+                                <% if (currentUser && currentUser._id.equals(comment.author.id)) { %>
+                                    <!--If the current user owns the comment, change the color of the user icon-->
+                                    <i style="color:orange;" class="fas fa-user"></i>
+                                <% } else { %>
+                                    <!--Else just display it black-->
+                                    <i class="fas fa-user"></i>
+                                <% } %>
+                                <!--Print out the author username-->
                                 <strong><%= comment.author.username %></strong>
+                            
                                 <span class="float-right"><%= moment(comment.createdAt).fromNow() %></span>
                                 <p> <%= comment.text %> </p>
+                                
                                 <% if( (currentUser && comment.author.id.equals(currentUser._id)) || (currentUser && currentUser.isAdmin) ) { %>
-                                    <a class="btn btn-sm btn-warning float-right" 
-                                        href="/campgrounds/<%= campground._id %>/comments/<%= comment._id%>/edit">Edit
-                                    </a>
                                     <form class="delete-form" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id%>?_method=DELETE" method="POST">
-                                         <input type="submit" class="btn btn-sm btn-danger float-right" value="Delete">   
+                                         <input type="submit" class="btn btn-sm btn-danger" value="Delete">   
                                     </form>
+                                    
+                                    <a class="btn btn-sm btn-warning" role="button" data-toggle="collapse" 
+                                        href="#collapseEdit<%= comment._id %>" aria-expanded="false" aria-controls="collapse<%= comment._id %>">Edit
+                                    </a>
+                                    
+                                    <!--Edit comment form-->
+                                    <div class="collapse" id="collapseEdit<%= comment._id %>">
+                                        <div class="well" style="border-left: 5px solid #ffbb33; margin-top: 15px;">
+                                            <h4>Edit your comment <i class="fas fa-edit"></i></h4>
+                                            <form id="edit-comment-form<%= comment._id %>" action="/campgrounds/<%= campground._id %>/comments/<%= comment._id %>?_method=PUT" method="POST">
+                                                <div class="form-group">
+                                                  <input class="form-control" type="text" disabled value="<%= currentUser.username %>">
+                                                </div>
+                                                <div class="form-group">
+                                                  <textarea class="form-control" name="comment[text]" placeholder="Your comment text..." form="edit-comment-form<%= comment._id %>" rows="5" cols="70"><%= comment.text %></textarea>
+                                                </div>
+                                                <div class="form-group">
+                                                  <button class="btn btn-warning btn-sm">Edit comment <i class="fas fa-comment"></i></button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    </div>
                                 <% } %>
+                                <hr>
+                                
                             </div>
                         </div>
                     <% }) %>
