--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,6 +9,7 @@
     <!-- Make site responsive on mobile/tablet -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/stylesheets/main.css">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
     
@@ -24,6 +25,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>">
                     <a class="nav-link" href="/campgrounds">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/contact">Contact Us</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">    
