--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,10 @@
                         <input class="form-control" type="text" name="adminCode" placeholder="Admin code">
                     </div>
                     <div class="form-group">
+                        <!-- Insert the code for the reCaptcha check box -->
+                        <div class="g-recaptcha" data-sitekey="6LcZZVgUAAAAAADy4oaQFWlfx3JWqECE_r7N7LoI"></div>
+                    </div>
+                    <div class="form-group">
                         <button class="btn btn-lg btn-primary btn-block" href="/register">Sign Up</button>
                     </div>
                 </form>
