--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -6,18 +6,22 @@
         <div class="col">
             <h1 style="text-align:center">Edit <%= campground.name %></h1>
             <div style="width:30%; margin:25px auto">
-                <form action="/campgrounds/<%= campground._id %>/?_method=PUT" method="POST">
+                <form action="/campgrounds/<%= campground._id %>/?_method=PUT" method="POST" enctype="multipart/form-data">
                     <div class="form-group">
-                        <input class="form-control" type="text" name = "campground[name]" value="<%= campground.name%>">
+                        <label for="name">Name</label>
+                        <input class="form-control" type="text" id="name" name = "campground[name]" value="<%= campground.name%>">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="number" name = "campground[price]" value="<%= campground.price%>" min="0.01" step="0.01">
+                        <label for="price">Price</label>
+                        <input class="form-control" type="number" id="price" name = "campground[price]" value="<%= campground.price%>" min="0.01" step="0.01">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name= "campground[image]" value="<%= campground.image%>">
+                        <label for="image">Image</label>
+                        <input type="file" id="image" name="image" accept="image/*">
                     </div>
                     <div class="form-group">
-                        <input class="form-control" type="text" name= "campground[description]" value="<%= campground.description%>">
+                        <label for="description">Description</label>
+                        <input class="form-control" type="text" id="description" name= "campground[description]" value="<%= campground.description%>">
                     </div>
                     <div class="form-group">
                         <label for="location">Location</label>
