--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,40 +2,43 @@
 
 
 <div class="container">
-    <div class="row"> 
-        <div class="col">
-            <h1 style="text-align:center">Create a new campground</h1>
-            <div style="width:30%; margin:25px auto">
-                <form action="/campgrounds" method="POST" enctype="multipart/form-data">
-                <!--<form action="/campgrounds" method="POST">-->
-                    <div class="form-group">
-                        <input class="form-control" type="text" name = "campground[name]" placeholder="campground name">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="number" name = "campground[price]" placeholder="price" min="0.01" step="0.01">
-                    </div>
-                    <!--<div class="form-group">-->
-                    <!--    <input class="form-control" type="text" name= "image" placeholder="image url">-->
-                    <!--</div>-->
-                    <div class="form-group">
-                        <label for="image">Image</label>
-                        <input type="file" id="image" name="image" accept="image/*" required>
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="text" name= "campground[description]" placeholder="description">
-                    </div>
-                    <div class="form-group">
-                        <label for="location">Location</label>
-                        <input class="form-control" type="text" name="campground[location]" id="location" placeholder="Yosemite National Park, CA">
-                    </div>
-                    <div class="form-group">
-                        <button class="btn btn-lg btn-secondary btn-block">Submit</button>
-                    </div>
-                </form>
-                <a style="text-align:center" href="/campgrounds">Add new campground</a>
-            </div>
+    <div class="row justify-content-center"> 
+        <div class="col-md-12 text-center">
+            <h1>Create a new campground</h1>
         </div>
-
+        
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <form action="/campgrounds" method="POST" enctype="multipart/form-data">
+            <!--<form action="/campgrounds" method="POST">-->
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input class="form-control" id="name" type="text" name = "campground[name]" placeholder="campground name">
+                </div>
+                <div class="form-group">
+                    <label for="price">Price</label>
+                    <input class="form-control" id="price" type="number" name = "campground[price]" placeholder="price" min="0.01" step="0.01">
+                </div>
+                <!--<div class="form-group">-->
+                <!--    <input class="form-control" type="text" name= "image" placeholder="image url">-->
+                <!--</div>-->
+                <div class="form-group">
+                    <label for="image">Image</label>
+                    <input type="file" id="image" name="image" accept="image/*" required>
+                </div>
+                <div class="form-group">
+                    <label for="description">Description</label>
+                    <input class="form-control" id="description" type="text" name= "campground[description]" placeholder="description">
+                </div>
+                <div class="form-group">
+                    <label for="location">Location</label>
+                    <input class="form-control" type="text" name="campground[location]" id="location" placeholder="Yosemite National Park, CA">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-lg btn-secondary btn-block">Submit</button>
+                </div>
+            </form>
+            <a style="text-align:center" href="/campgrounds">Add new campground</a>
+        </div>
     </div>
 </div>
 
