--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -13,7 +13,7 @@
         </div>
         
         <div class="col-md-9">
-            <div class="img-thumbnail">
+            <div class="img-thumbnail mb-4">
                 <img class="img-responsive" src="<%= campground.image%>">
                 <div class="caption-full">
                     <h4 class="float-right">$<%= campground.price%>/night</h4>
