--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,26 +1,28 @@
 <% include ./partials/header %>
 
 
-<div class="container">
-    <div class="row"> 
-        <div class="col">
-            <h1 style="text-align:center">Login!</h1>
-            <div style="width:30%; margin:25px auto">
-                <form action="/login" method="POST">
-                    <div class="form-group">
-                        <input class="form-control" type="text" name="username" placeholder="username">
-                    </div>
-                    <div class="form-group">
-                        <input class="form-control" type="password" name="password" placeholder="password">
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Login" class="btn btn-lg btn-primary btn-block">
-                    </div>
-                </form>
-            </div>
+<div class="row">
+    <div class="col-md-12">
+        
+        <form class="form-signin" action="/login" method="POST">
+              <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
+              <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
+              <label for="username" class="sr-only">Username</label>
+              <input type="text" id="username" class="form-control" name="username" placeholder="username" required autofocus>
+              <label for="inputPassword" class="sr-only">Password</label>
+              <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+              <div class="checkbox mb-3">
+                <label>
+                  <input type="checkbox" value="remember-me"> Remember me
+                </label>
+              </div>
+              <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
+        </form>
+        <div class="form-signin">
+            <a href="/campgrounds">Go Back</a>
         </div>
+
     </div>
 </div>
-
 
 <% include ./partials/footer %>
