--- a/views/contact/contactMe.ejs
+++ b/views/contact/contactMe.ejs
@@ -36,7 +36,7 @@
                 <button class="btn btn-lg btn-primary btn-block">Send Email</button>
               </div>
           </form>
-          <a href="/campgrounds">Go Back</a>
+          <a href="/publications">Go Back</a>
       </div>
     </div>
   </div>
