--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,22 +3,6 @@ body {
   height: 100%;
 }
 
-/*body {*/
-/*  display: -ms-flexbox;*/
-/*  display: -webkit-box;*/
-/*  display: flex;*/
-/*  -ms-flex-align: center;*/
-/*  -ms-flex-pack: center;*/
-/*  -webkit-box-align: center;*/
-/*  align-items: center;*/
-/*  -webkit-box-pack: center;*/
-/*  justify-content: center;*/
-/*  padding-top: 40px;*/
-/*  padding-bottom: 40px;*/
-/*  background-color: #f5f5f5;*/
-/*  margin-bottom: 60px;*/
-/*}*/
-
 /*style for login*/
 .form-signin {
   width: 100%;
@@ -73,3 +57,6 @@ body {
     height:400px;
     width:100%;
 }
+
+
+/*style for pagination*/
