--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
               <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>
         </form>
         <div class="form-signin">
-            <a href="/campgrounds">Go Back</a>
+            <a href="/publications">Go Back</a>
         </div>
 
     </div>
