--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>YelpCamp</title>
+	<title>GroupPage</title>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" 
 	    integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" 
 	    crossorigin="anonymous">
@@ -15,7 +15,7 @@
     
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">YelpCamp</a>
+            <a class="navbar-brand" href="/">GroupPage</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,8 +23,8 @@
         
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item <%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>">
-                    <a class="nav-link" href="/campgrounds">Home</a>
+                <li class="nav-item <%= typeof page !== 'undefined' && page === 'publications' ? 'active' : '' %>">
+                    <a class="nav-link" href="/publications">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact Us</a>
