--- a/views/publications/index.ejs
+++ b/views/publications/index.ejs
@@ -4,15 +4,15 @@
 <div class="container">
     <header class="jumbotron">
         <div class="container">
-            <h1>This is campgrounds page</h1>
-            <p>all campgrounds sites</p>
+            <h1>This is publications page</h1>
+            <p>all publications sites</p>
             <p>
-                <a class="btn btn-lg btn-primary" href="/campgrounds/new">Add new campground</a>
+                <a class="btn btn-lg btn-primary" href="/publications/new">Add new publication</a>
             </p>
             <p>
-                <form action="/campgrounds" method="GET" class="form-inline">
+                <form action="/publications" method="GET" class="form-inline">
                     <div class="form-group">
-                        <input type="text" name="search" placeholder="Campground search" class="form-control">
+                        <input type="text" name="search" placeholder="Publication search" class="form-control">
                         <input type="submit" value="Search" class="btn btn-default">
                     </div>
                 </form>
@@ -20,15 +20,15 @@
         </div>
     </header>
     
-    <div class="row text-center" id="campground-grid">
-        <% campgrounds.forEach(function(campground){ %>
+    <div class="row text-center" id="publication-grid">
+        <% publications.forEach(function(publication){ %>
             <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
                 <div class="card">
-                    <img class="card-img-top" src="<%= campground.image%>" alt="Card image cap">
+                    <img class="card-img-top" src="<%= publication.image%>" alt="Card image cap">
                     <div class="card-body">
-                        <h5 class="card-title"><%= campground.name %></h5>
+                        <h5 class="card-title"><%= publication.name %></h5>
                         <!--<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>-->
-                        <a href="/campgrounds/<%= campground._id%>" class="btn btn-primary">More info</a>
+                        <a href="/publications/<%= publication._id%>" class="btn btn-primary">More info</a>
                     </div>
                 </div>
             </div>
@@ -44,13 +44,13 @@
             <% if (current == 1) { %>
             <li class="disabled"><a>First</a></li>
             <% } else { %>
-            <li><a href="/campgrounds">First</a></li>
+            <li><a href="/publications">First</a></li>
             <% } %>
      
             <% if (current == 1) { %>
             <li class="disabled"><a>«</a></li>
             <% } else { %>
-            <li><a href="/campgrounds?page=<%= Number(current) - 1 %>">«</a></li>
+            <li><a href="/publications?page=<%= Number(current) - 1 %>">«</a></li>
             <% } %>
      
             <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
@@ -61,7 +61,7 @@
             <% if (i == current) { %>
             <li class="active"><a><%= i %></a></li>
             <% } else { %>
-            <li><a href="/campgrounds?page=<%= i %>"><%= i %></a></li>
+            <li><a href="/publications?page=<%= i %>"><%= i %></a></li>
             <% } %>
             <% if (i == Number(current) + 4 && i < pages) { %>
             <li class="disabled"><a>...</a></li>
@@ -71,13 +71,13 @@
             <% if (current == pages) { %>
             <li class="disabled"><a>»</a></li>
             <% } else { %>
-            <li><a href="/campgrounds?page=<%= Number(current) + 1 %>">»</a></li>
+            <li><a href="/publications?page=<%= Number(current) + 1 %>">»</a></li>
             <% } %>
      
             <% if (current == pages) { %>
             <li class="disabled"><a>Last</a></li>
             <% } else { %>
-            <li><a href="/campgrounds?page=<%= pages %>">Last</a></li>
+            <li><a href="/publications?page=<%= pages %>">Last</a></li>
             <% } %>
         </ul>
         <% } %>
