--- a/views/publications/new.ejs
+++ b/views/publications/new.ejs
@@ -4,19 +4,19 @@
 <div class="container">
     <div class="row justify-content-center"> 
         <div class="col-md-12 text-center">
-            <h1>Create a new campground</h1>
+            <h1>Create a new publication</h1>
         </div>
         
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <form action="/campgrounds" method="POST" enctype="multipart/form-data">
-            <!--<form action="/campgrounds" method="POST">-->
+            <form action="/publications" method="POST" enctype="multipart/form-data">
+            <!--<form action="/publications" method="POST">-->
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input class="form-control" id="name" type="text" name = "campground[name]" placeholder="campground name">
+                    <input class="form-control" id="name" type="text" name = "publication[name]" placeholder="publication name">
                 </div>
                 <div class="form-group">
                     <label for="price">Price</label>
-                    <input class="form-control" id="price" type="number" name = "campground[price]" placeholder="price" min="0.01" step="0.01">
+                    <input class="form-control" id="price" type="number" name = "publication[price]" placeholder="price" min="0.01" step="0.01">
                 </div>
                 <!--<div class="form-group">-->
                 <!--    <input class="form-control" type="text" name= "image" placeholder="image url">-->
@@ -27,17 +27,17 @@
                 </div>
                 <div class="form-group">
                     <label for="description">Description</label>
-                    <input class="form-control" id="description" type="text" name= "campground[description]" placeholder="description">
+                    <input class="form-control" id="description" type="text" name= "publication[description]" placeholder="description">
                 </div>
                 <div class="form-group">
                     <label for="location">Location</label>
-                    <input class="form-control" type="text" name="campground[location]" id="location" placeholder="Yosemite National Park, CA">
+                    <input class="form-control" type="text" name="publication[location]" id="location" placeholder="Yosemite National Park, CA">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-secondary btn-block">Submit</button>
                 </div>
             </form>
-            <a style="text-align:center" href="/campgrounds">Add new campground</a>
+            <a style="text-align:center" href="/publications">Add new publication</a>
         </div>
     </div>
 </div>
