--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -12,10 +12,10 @@
 		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error quasi similique architecto ad modi sunt quaerat possimus, officiis quos. Voluptatibus repellendus exercitationem, id saepe sunt consectetur non quam sapiente assumenda.
 	</div>
 	<div class="col-md-8">
-		<h3><%= user.username %>'s campgrounds:</h3>
+		<h3><%= user.username %>'s publications:</h3>
 		<ul>
-		<% campgrounds.forEach(function(campground) { %>
-			<li><a href="/campgrounds/<%= campground.id %>"><%= campground.name %></a></li>
+		<% publications.forEach(function(publication) { %>
+			<li><a href="/publications/<%= publication.id %>"><%= publication.name %></a></li>
 		<% }); %>
 		</ul>
 	</div>
