--- a/views/publications/new.ejs
+++ b/views/publications/new.ejs
@@ -34,6 +34,10 @@
                     <input class="form-control" type="text" name="publication[location]" id="location" placeholder="Yosemite National Park, CA">
                 </div>
                 <div class="form-group">
+                    <label for="location">Url</label>
+                    <input class="form-control" type="text" name="publication[url]" id="url" placeholder="link to the publication">
+                </div>
+                <div class="form-group">
                     <button class="btn btn-lg btn-secondary btn-block">Submit</button>
                 </div>
             </form>
