--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item <%= typeof page !== 'undefined' && page === 'publications' ? 'active' : '' %>">
-                    <a class="nav-link" href="/publications">Home</a>
+                    <a class="nav-link" href="/publications">Publications</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Group Members</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/contact">Contact Us</a>
