--- a/views/publications/index.ejs
+++ b/views/publications/index.ejs
@@ -20,10 +20,11 @@
         </div>
     </header>
     
-    <div class="row text-center" id="publication-grid">
+    <div class="row justify-content-center text-center" id="publication-grid">
         <% publications.forEach(function(publication){ %>
-            <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-                <div class="card">
+            <!-- <div class="col-lg-3 col-md-4 col-sm-6 mb-4"> -->
+            <div class = 'publication-abstract clo-lg-6'>
+                <div class="card bg-info">
                     <img class="card-img-top" src="<%= publication.image%>" alt="Card image cap">
                     <div class="card-body">
                         <h5 class="card-title"><%= publication.name %></h5>
