--- a/views/publications/new.ejs
+++ b/views/publications/new.ejs
@@ -1,41 +1,50 @@
 <% include ../partials/header %>
 
 
+
 <div class="container">
     <div class="row justify-content-center"> 
         <div class="col-md-12 text-center">
             <h1>Create a new publication</h1>
         </div>
         
-        <div class="col-sm-12 col-md-6 col-lg-4">
+        <div class="col-sm-12 col-md-6 col-lg-8">
             <form action="/publications" method="POST" enctype="multipart/form-data">
             <!--<form action="/publications" method="POST">-->
                 <div class="form-group">
-                    <label for="name">Name</label>
-                    <input class="form-control" id="name" type="text" name = "publication[name]" placeholder="publication name">
+                    <label for="title">Title</label>
+                    <input class="form-control" id="title" type="text" name = "publication[title]" placeholder="publication title">
                 </div>
                 <div class="form-group">
-                    <label for="price">Price</label>
-                    <input class="form-control" id="price" type="number" name = "publication[price]" placeholder="price" min="0.01" step="0.01">
+                    <label for="description">Description</label>
+                    <input class="form-control" id="description" type="text" name= "publication[description]" placeholder="description">
                 </div>
                 <!--<div class="form-group">-->
                 <!--    <input class="form-control" type="text" name= "image" placeholder="image url">-->
                 <!--</div>-->
                 <div class="form-group">
                     <label for="image">Image</label>
-                    <input type="file" id="image" name="image" accept="image/*" required>
+                    <input type="file" id="image" name="image" accept="image/*">
                 </div>
-                <div class="form-group">
-                    <label for="description">Description</label>
-                    <input class="form-control" id="description" type="text" name= "publication[description]" placeholder="description">
-                </div>
-                <div class="form-group">
+               <!--  <div class="form-group">
                     <label for="location">Location</label>
                     <input class="form-control" type="text" name="publication[location]" id="location" placeholder="Yosemite National Park, CA">
+                </div> -->
+                <div class="form-group">
+                    <label for="citation">Citation</label>
+                    <input class="form-control" id="citation" type="text" name = "publication[citation]" placeholder="Li, K.; Shao, X.; Tseng, L.; Malcolmson, S. J. J. Am. Chem. Soc. 2018, 140, 598.">
                 </div>
                 <div class="form-group">
-                    <label for="location">Url</label>
+                    <label for="url">Url</label>
                     <input class="form-control" type="text" name="publication[url]" id="url" placeholder="link to the publication">
+                </div>
+                <div class="form-group">
+                    <label for="publicatedDate">PublicatedDate</label>
+                    <input class="form-control" type="text" name="publication[publicatedDate]" id="publicatedDate" placeholder="YYYY-mm-dd">
+                </div>
+                <div class="form-group">
+                    <label for="publicatedAuthors">PublicatedAuthors</label>
+                    <input class="form-control" type="text" name="publication[publicatedAuthors]" id="publicatedAuthors" placeholder="Kangnan Li, Xinxin Shao">
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-secondary btn-block">Submit</button>
