--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -47,11 +47,11 @@
             </ul>
             <ul class="navbar-nav ml-auto">    
                 <% if(!currentUser) { %>
-                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/register">Sign Up</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/users/login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/users/register">Sign Up</a></li>
                 <% } else { %>
                     <li class="nav-item"><a class="nav-link" href="#">Signed In As <%= currentUser.username%></a></li>
-                    <li class="nav-item"><a class="nav-link" href="/logout">Logout</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/users/logout">Logout</a></li>
                 <% } %>
             </ul>
         </div>
