--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -1,10 +1,10 @@
-<% include ./partials/header %>
+<% include ../partials/header %>
 
 
 <div class="row">
     <div class="col-md-12">
         
-        <form class="form-signin" action="/login" method="POST">
+        <form class="form-signin" action="/users/login" method="POST">
               <img class="mb-4" src="https://getbootstrap.com/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
               <h1 class="h3 mb-3 font-weight-normal">Please Login</h1>
               <label for="username" class="sr-only">Username</label>
@@ -25,4 +25,4 @@
     </div>
 </div>
 
-<% include ./partials/footer %>
+<% include ../partials/footer %>
