--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -95,7 +95,7 @@
                         Please enter a valid email address for shipping updates.
                       </div>
                 </div>
-
+ 
                 <div class="mb-3">
                       <label for="adminCode">Administrator Code</label>
                       <input type="text" class="form-control" id="adminCode" placeholder="" name="adminCode">
@@ -103,7 +103,7 @@
 
                 <div class="mb-3">
                       <label for="selfie">Selfie</label>
-                      <input type="file" class="form-control" id="selfie" name="selfie" accept="image/*">
+                      <input type="file" class="form-control" id="selfie" name="image" accept="image/*">
                       <div class="invalid-feedback">
                         Please upload a valid selfie.
                       </div>
